dist_man1_MANS=

if BUILD_SUPERAXECOIND
  dist_man1_MANS+=superaxecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=superaxecoin-qt.1
endif

if BUILD_SUPERAXECOIN_CLI
  dist_man1_MANS+=superaxecoin-cli.1
endif

if BUILD_SUPERAXECOIN_TX
  dist_man1_MANS+=superaxecoin-tx.1
endif

if BUILD_SUPERAXECOIN_UTIL
  dist_man1_MANS+=superaxecoin-util.1
endif

if ENABLE_WALLET
if BUILD_SUPERAXECOIN_WALLET
  dist_man1_MANS+=superaxecoin-wallet.1
endif
endif
